Got through the setup and trained up a very simple PPO agent, all it does for now is press buttons randomly

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ loguru
 gym==0.25.2
 gymnasium==1.0.0
 matplotlib
-numpy==2.1.1
+numpy
 openai==1.61.1
 opencv-python==4.11.0.86
 pytest
@@ -18,7 +18,7 @@ sb3_contrib==2.3.0
 scikit-image==0.25.1
 scikit-learn==1.6.1
 scikit-video==1.1.11
-scipy==1.13.1
+scipy
 stable_baselines3==2.5.0
 sympy==1.5.1
 torch==2.4.1
