--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,3 @@
-black
-black[jupyter]
 cloudpickle==3.0.0
 IPython
 gdown
@@ -7,7 +5,7 @@ loguru
 gym==0.25.2
 gymnasium==1.0.0
 matplotlib
-numpy
+numpy==2.1.1
 openai==1.61.1
 opencv-python==4.11.0.86
 pytest
@@ -20,9 +18,11 @@ sb3_contrib==2.3.0
 scikit-image==0.25.1
 scikit-learn==1.6.1
 scikit-video==1.1.11
-scipy
+scipy==1.13.1
 stable_baselines3==2.5.0
 sympy==1.5.1
+tensorboard
+tensorflow
 torch==2.4.1
 tqdm==4.67.1
 transformers==4.48.2
